# boris-hub

./: LICENSE  README.md
.github/workflows/: backend.yml
backend/: .gitignore  README.md  pyproject.toml  setup.cfg
backend/app/: __init__.py
backend/app/core/: __init__.py
backend/app/core/users/: __init__.py  models.py  repo.py  service.py
backend/tests/: __init__.py
backend/tests/core/users/: test_service.py
