[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["MomsDeveloper <georgiy.khabner@mail.ru>", "butvinm <butvin.mihail@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
