[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["MomsDeveloper <georgiy.khabner@mail.ru>", "butvinm <butvin.mihail@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.18.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

